--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
             font-style: normal;
         }
         h3{
-            text-align: justify;
+            text-align: center;
         }
         h5{
             text-align: center;
