--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
             text-align: center;
         }
         p{
-            text-align: justify;
+            text-align: center;
         }
         strong{
             color: black;
